--- a/Item-eyez.Installer/Product.wxs
+++ b/Item-eyez.Installer/Product.wxs
@@ -11,6 +11,7 @@
                 <Feature Id="ProductFeature" Title="ItemEyez Installer" Level="1">
                         <ComponentGroupRef Id="ApplicationFiles" />
                         <ComponentGroupRef Id="SqlComponents" />
+                        <ComponentGroupRef Id="ApplicationShortcuts" />
                 </Feature>
                 <UI>
                         <ui:WixUI Id="WixUI_InstallDir" />
@@ -27,10 +28,13 @@
         </Fragment>
 
         <Fragment>
+                <DirectoryRef Id="ProgramMenuFolder">
+                        <Directory Id="ApplicationProgramsFolder" Name="ItemEyez" />
+                </DirectoryRef>
+        </Fragment>
+
+        <Fragment>
                 <Icon Id="ApplicationIcon" SourceFile="..\\item-eyez\\images\\item-eyez.ico" />
-                <ComponentGroup Id="ApplicationFiles" Directory="INSTALLFOLDER">
-                        <!-- Populated at build time via HarvestDirectory in the WiX project. -->
-                </ComponentGroup>
         </Fragment>
 
         <Fragment>
@@ -55,5 +59,26 @@
                         </Component>
                 </ComponentGroup>
                 <Binary Id="CreateSqlScript" SourceFile="..\\item-eyez\\create.sql" />
+        </Fragment>
+
+        <Fragment>
+                <ComponentGroup Id="ApplicationShortcuts">
+                        <Component Id="ApplicationShortcut"
+                                           Guid="0C0DAE45-3C0B-4C43-AB2E-4FB1A2B4EF51"
+                                           Directory="ApplicationProgramsFolder">
+                                <Shortcut Id="StartMenuShortcut"
+                                                  Name="ItemEyez"
+                                                  Target="[INSTALLFOLDER]Item-eyez.exe"
+                                                  WorkingDirectory="INSTALLFOLDER"
+                                                  Icon="ApplicationIcon" />
+                                <RemoveFolder Id="RemoveApplicationProgramsFolder" On="uninstall" />
+                                <RegistryValue Root="HKCU"
+                                                             Key="Software\\death-scripts\\ItemEyez"
+                                                             Name="Installed"
+                                                             Type="integer"
+                                                             Value="1"
+                                                             KeyPath="yes" />
+                        </Component>
+                </ComponentGroup>
         </Fragment>
 </Wix>
