Fix harvested files reference and start menu directory

--- a/Item-eyez.Installer/Product.wxs
+++ b/Item-eyez.Installer/Product.wxs
@@ -28,9 +28,9 @@
         </Fragment>
 
         <Fragment>
-                <DirectoryRef Id="ProgramMenuFolder">
+                <StandardDirectory Id="ProgramMenuFolder">
                         <Directory Id="ApplicationProgramsFolder" Name="ItemEyez" />
-                </DirectoryRef>
+                </StandardDirectory>
         </Fragment>
 
         <Fragment>
