--- a/Item-eyez.Installer/Product.wxs
+++ b/Item-eyez.Installer/Product.wxs
@@ -73,7 +73,7 @@
                                                   Icon="ApplicationIcon" />
                                 <RemoveFolder Id="RemoveApplicationProgramsFolder" On="uninstall" />
                                 <RegistryValue Root="HKCU"
-                                                             Key="Software\\death-scripts\\ItemEyez"
+                                                             Key="Software\death-scripts\ItemEyez"
                                                              Name="Installed"
                                                              Type="integer"
                                                              Value="1"
